5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1831_1647.log
== TEST (2019-06-13 16:10:19) 
-- CODE:
from numpy import*
percentual = array(eval(input"percentual de presenca:"))

aprovados = 0
for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(size(percentual)):
	if(percentual[i] >= 70):
		alunos_aprovados[i] = i
print(alunos_aprovados)
-- ERROR:
File "XXXX", line 2
    percentual = array(eval(input"percentual de presenca:"))
                                                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:10:36) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0
for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(size(percentual)):
	if(percentual[i] >= 70):
		alunos_aprovados[i] = i
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:16) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0
for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(size(percentual)):
	if(percentual[i] >= 70):
		alunos_aprovados[i] = i
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:38) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0
for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(size(percentual)):
	if(percentual[i] >= 70):
		alunos_aprovados[i] = i
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:47) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0
for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(size(percentual)):
	if(percentual[i] >= 70):
		alunos_aprovados[i] = i
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:09) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0
for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(size(percentual)):
	if(i < size(alunos_aprovados))
	if(percentual[i] >= 70):
		alunos_aprovados[i] = i
print(aprovados)
print(alunos_aprovados)
-- ERROR:
File "XXXX", line 10
    if(i < size(alunos_aprovados))
                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:23) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0
for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(size(percentual)):
	if(i < size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:52) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0
for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(size(percentual)):
	if(i < size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:15:03) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(size(percentual)):
	if(l < size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
	l = l + 1
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:15:37) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(size(percentual)):
	if(l < size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
			print(alunos_aprovados)
	l = l + 1
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:04) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	if(l < size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
			print(alunos_aprovados)
	l = l + 1
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:17:01) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	if(l < size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
			print(alunos_aprovados)
	l = l + 1
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:18:06) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	if(l < size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = percentual[i]
			print(alunos_aprovados)
	l = l + 1
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:48) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	if(l < size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = l
			
			print(alunos_aprovados)
	l = l + 1
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:20:38) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	if(l < size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = l
			i = i + 1
			print(alunos_aprovados)
	l = l + 1
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:21:53) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	if(i < size(percentual)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = l
			i = i + 1
			print(alunos_aprovados)
	l = l + 1
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:23:23) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		print(i)
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	if(i < size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = l
			i = i + 1
			print(alunos_aprovados)
	l = l + 1
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:08) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		print(i)
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	if(i < size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
			print(i)
	l = l + 1
print(aprovados)
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:38) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		print(i)
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	if(i < size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
			print(i)
	l = l + 1
#print(aprovados)
#print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:57) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	if(i < size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
			print(i)
	l = l + 1
#print(aprovados)
#print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:30) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	if(i < range(aprovados):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
			print(i)
	l = l + 1
#print(aprovados)
#print(alunos_aprovados)
-- ERROR:
File "XXXX", line 13
    if(i < range(aprovados):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:53) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	if(i < range(aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
			print(i)
	l = l + 1
#print(aprovados)
#print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:29:01) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	if(i < size(percentual) and i > size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
			print(i)
	l = l + 1
#print(aprovados)
#print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:29:59) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	for i in range(0,size(alunos_aprovados))
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
			print(i)
	l = l + 1
#print(aprovados)
#print(alunos_aprovados)
-- ERROR:
File "XXXX", line 13
    for i in range(0,size(alunos_aprovados))
                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:30:14) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
l = 0
for i in range(0,size(percentual)):
	for i in range(0,size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
			print(i)
	l = l + 1
#print(aprovados)
#print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:38:00) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(0,size(percentual)):
	for i in range(0,size(alunos_aprovados)):
		if(percentual[i] >= 70):
			alunos_aprovados[i] = i
			print(i)
	l = l + 1
#print(aprovados)
#print(alunos_aprovados)
-- EXECUTION TIME:
0.891615
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1831/1647/main.py", line 16, in <module>
    l = l + 1
NameError: name 'l' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:02) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(0,size(percentual)):
	for i in range(0,size(alunos_aprovados)):
		if(percentual[i] >= 70)
			print(i)
#print(aprovados)
#print(alunos_aprovados)
-- ERROR:
File "XXXX", line 13
    if(percentual[i] >= 70)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:08) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(0,size(percentual)):
	for i in range(0,size(alunos_aprovados)):
		if(percentual[i] >= 70)
			print(i)
#print(aprovados)
#print(alunos_aprovados)
-- ERROR:
File "XXXX", line 13
    if(percentual[i] >= 70)
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:39:26) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(0,size(percentual)):
	for i in range(0,size(alunos_aprovados)):
		if(percentual[i] >= 70):
			print(i)
#print(aprovados)
#print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:03) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(0,size(percentual)):
	if(percentual[i] >= 70):
		print(i)
#print(aprovados)
#print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:40:32) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(0,size(percentual)):
	if(percentual[i] >= 70):
		#print(i)
print(aprovados)
#print(alunos_aprovados)
-- EXECUTION TIME:
0.672294
-- ERROR:
  File "/home/codebench/codes/1831/1647/main.py", line 14
    print(aprovados)
    ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:34) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(0,size(percentual)):
	if(percentual[i] >= 70):
		#print(i)
print(aprovados)
print(alunos_aprovados)
-- ERROR:
File "XXXX", line 14
    print(aprovados)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:41) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(0,size(percentual)):
	if(percentual[i] >= 70):
		#print(i)
print(aprovados)
print(alunos_aprovados)
-- ERROR:
File "XXXX", line 14
    print(aprovados)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:40:49) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
		
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(0,size(percentual)):
	if(percentual[i] >= 70):
		#print(i)
		
print(aprovados)
print(alunos_aprovados)
-- ERROR:
File "XXXX", line 15
    print(aprovados)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:42:52) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
print(aprovados)		
alunos_aprovados = zeros(aprovados, dtype=int)
for i in range(0,size(percentual)):
	if(percentual[i] >= 70):
		alunos_aprovados[i] = aprovados[i] 
	
#(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:43:51) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
print(aprovados)		
alunos_aprovados = zeros(aprovados, dtype=int)

for i in range(0,size(percentual)):
	if(percentual[i] >= 70):
		alunos_aprovados[i] = i 
	
#(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:23) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
print(aprovados)		
alunos_aprovados = zeros(aprovados, dtype=int)

for i in range(0,size(percentual)):
	if(percentual[i] >= 70):
		alunos_aprovados[i] = i 
	
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:48:54) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
print(aprovados)		
alunos_aprovados = zeros(aprovados, dtype=int)

o = 0
for i in range(0,size(percentual)):
	if(percentual[i] >= 70):
		alunos_aprovadoso[o] = i 
		o = o + 1
	
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:27) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
print(aprovados)		
alunos_aprovados = zeros(aprovados, dtype=int)

i_2 = 0
for i in range(0,size(percentual)):
	if(percentual[i] >= 70):
		if(i_2 < size(percentual)):
		alunos_aprovados[i_2] = i 
		i_2 = i_2 + 1
	
print(alunos_aprovados)
-- ERROR:
File "XXXX", line 16
    alunos_aprovados[i_2] = i 
                   ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:50:49) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
print(aprovados)		
alunos_aprovados = zeros(aprovados, dtype=int)

i_2 = 0
for i in range(0,size(percentual)):
	if(percentual[i] >= 70):
		if(i_2 < size(percentual)):
			alunos_aprovados[i_2] = i 
			i_2 = i_2 + 1
	
print(alunos_aprovados)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:50:59) 
-- CODE:
from numpy import*
percentual = array(eval(input("percentual de presenca:")))

aprovados = 0

for i in range(size(percentual)):
	if(percentual[i] >= 70 ):
		aprovados = aprovados + 1
print(aprovados)		
alunos_aprovados = zeros(aprovados, dtype=int)

i_2 = 0
for i in range(0,size(percentual)):
	if(percentual[i] >= 70):
		if(i_2 < size(percentual)):
			alunos_aprovados[i_2] = i 
			i_2 = i_2 + 1
	
print(alunos_aprovados)
-- EXECUTION TIME:
0.926761
-- TEST CASE 1:
---- input:
[20,35,70,75,45,85]
---- correct output:
3
[2 3 5]
---- user output:
3
[2 3 5]
-- TEST CASE 2:
---- input:
[70,65,35,70,75,45,85]
---- correct output:
4
[0 3 4 6]
---- user output:
4
[0 3 4 6]
-- TEST CASE 3:
---- input:
[70,65,35]
---- correct output:
1
[0]
---- user output:
1
[0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
